[1.7.0] Add documentation for the Tidy functionality - Make specifying the child property for ElementDef unnecessary when overloading content_model or content_model_type - Add necessary includes to Tidy module files - Move div@align fix to Tidy_Proprietary - Future proof attrTransform.php by setting doctype to strict
git-svn-id: http://htmlpurifier.org/svnroot/htmlpurifier/trunk@1071 48356398-32a2-884e-a903-53898d9a118a

--- a/docs/style.css
+++ b/docs/style.css
@@ -25,6 +25,7 @@ h4 {font-family:sans-serif; font-size:0.9em; font-weight:bold; }
 .aside {margin-left:2em; font-family:sans-serif; font-size:0.9em; }
 blockquote .label {font-weight:bold; font-size:1em; margin:0 0 .1em;
     border-bottom:1px solid #CCC;}
+.emphasis {font-weight:bold; text-align:center; font-size:1.3em;}
 
 /* A regular table */
 .table {border-collapse:collapse; border-bottom:2px solid #888; margin-left:2em; }
